# manta

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  COPYRIGHT.txt  ChangeLog.md  ChangeLog.txt  README.md  README.txt  configure
redist/: CMakeLists.txt  README.md  README.txt  hoedown-1.0.2.tar.bz2  hoedown-1.0.2_with_allext.tar.bz2  htslib-0.2.0-rc12.tar.bz2  htslib-1.0.tar.bz2  htslib-1.2.1-204-g8197cfd.tar.bz2  htslib-1.2.1.tar.bz2  htslib-1.6.tar.bz2  htslib-1.7-6-g6d2bfb7.tar.bz2  htslib-1.9.tar.bz2  pyflow-1.0.0.tar.bz2  pyflow-1.1.10.tar.bz2  pyflow-1.1.11.tar.bz2  pyflow-1.1.12.tar.bz2  pyflow-1.1.14.tar.bz2  pyflow-1.1.19.tar.bz2  pyflow-1.1.2.tar.bz2  pyflow-1.1.20.tar.bz2  pyflow-1.1.3.tar.bz2  pyflow-1.1.4.tar.bz2  pyflow-1.1.5.tar.bz2  pyflow-1.1.6.tar.bz2  pyflow-1.1.7.tar.bz2  pyflow-1.1.8.tar.bz2  pyflow-1.1.9.tar.bz2  samtools-0.1.18.tar.bz2  samtools-0.1.18_no_tview.tar.bz2  samtools-0.2.0-rc12.tar.bz2  samtools-1.0.tar.bz2  samtools-1.2-216-gdffc67f.tar.bz2  samtools-1.2.tar.bz2  samtools-1.6.tar.bz2  samtools-1.9.tar.bz2  tabix-0.2.6.tar.bz2
redist/cmake-modules-c99fd3/: GetGitRevisionDescription.cmake
src/: CMakeLists.txt  configure
src/c++/: .clang-format  CMakeLists.txt  Doxyfile.in  README.cxx.coordinates.txt  run_cppcheck.bash
src/c++/lib/: CMakeLists.txt  README.md  README.txt
src/c++/lib/alignment/: AlignerBase.hh  AlignerBase.hpp  AlignerBaseImpl.hh  AlignerUtil.hh  AlignerUtil.hpp  Alignment.cpp  Alignment.hh  Alignment.hpp  AlignmentScores.hh  AlignmentScores.hpp  AlignmentScoringUtil.hh  AlignmentScoringUtil.hpp  AlignmentScoringUtilImpl.hh  AlignmentScoringUtilImpl.hpp  AlignmentUtil.cpp  AlignmentUtil.hh  AlignmentUtil.hpp  GlobalAligner.hh  GlobalAligner.hpp  GlobalAlignerImpl.hh  GlobalAlignerImpl.hpp  GlobalJumpAligner.hh  GlobalJumpAligner.hpp  GlobalJumpAlignerImpl.hh  GlobalJumpAlignerImpl.hpp  GlobalJumpIntronAligner.hh  GlobalJumpIntronAligner.hpp  GlobalJumpIntronAlignerImpl.hh  GlobalJumpIntronAlignerImpl.hpp  GlobalLargeIndelAligner.hh  GlobalLargeIndelAligner.hpp  GlobalLargeIndelAlignerImpl.hh  GlobalLargeIndelAlignerImpl.hpp  JumpAlignerBase.hh  JumpAlignerBase.hpp  JumpAlignerBaseImpl.hh  JumpAlignerBaseImpl.hpp  ReadScorer.cpp  ReadScorer.hh  SingleRefAlignerShared.hh  (+3 more)
src/c++/lib/applications/: CMakeLists.txt
src/c++/lib/appstats/: GSCEdgeStats.cpp  GSCEdgeStats.hh  GSCEdgeStats.hpp  SVFinderStats.cpp  SVFinderStats.hh  SVFinderStats.hpp
src/c++/lib/assembly/: AssembledContig.cpp  AssembledContig.hh  AssembledContig.hpp  AssemblyReadInfo.hh  AssemblyReadInfo.hpp  AssemblyReadMap.hh  CMakeLists.txt  IterativeAssembler.cpp  IterativeAssembler.hh  IterativeAssembler.hpp  SmallAssembler.cpp  SmallAssembler.hh  SmallAssembler.hpp  SmallAssemblerOptions.hh
src/c++/lib/blt_util/: CMakeLists.txt  CircularCounter.hh  CircularCounter.hpp  LinearScaler.hh  MedianDepthTracker.hh  MedianDepthTracker.hpp  PolymorphicObject.hh  PolymorphicObject.hpp  RangeMap.hh  RangeMap.hpp  ReadKey.cpp  ReadKey.hh  ReadKey.hpp  RegionSum.hh  RegionSum.hpp  RegionTracker.cpp  RegionTracker.hh  RegionTracker.hpp  RegionTrackerImpl.hh  RegionTrackerImpl.hpp  SampleVector.hh  SampleVector.hpp  SampleVectorImpl.hh  SampleVectorImpl.hpp  SimpleAlignment.cpp  SimpleAlignment.hh  SimpleAlignment.hpp  SizeDistribution.cpp  SizeDistribution.hh  SizeDistribution.hpp  align_path.cpp  align_path.hh  align_path.hpp  align_path_bam_util.cpp  align_path_bam_util.hh  align_path_impl.hh  align_path_impl.hpp  align_path_match_descriptor.cpp  align_path_match_descriptor.hh  align_path_match_descriptor.hpp  (+125 more)
src/c++/lib/common/: ChromosomeMetadata.hh  ContigList.cpp  ContigList.hh  Exceptions.cpp  Exceptions.hh  Exceptions.hpp  OutStream.cpp  OutStream.hh  OutStream.hpp  Program.cpp  Program.hh  Program.hpp  ProgramConfig.hh  ProgramConfig.hpp  ProgramUtil.cpp  ProgramUtil.hh  ProgramUtil.hpp  ReadPairOrient.cpp  ReadPairOrient.hh  ReadPairOrient.hpp  String.hh  Variant.cpp  Variant.hh  VcfFields.cpp  (+14 more)
src/cmake/: boost.cmake  buildTimeConfigure.cmake  cxxCommon.cmake  cxxConfigure.cmake  cxxExecutable.cmake  cxxLibrary.cmake  cxxTestLibrary.cmake  getBuildTimeConfigInfo.cmake  globals.cmake  macros.cmake  unpackMultifileTarGz.cmake
src/cmake/bootstrap/: common.bash  getVersion.bash  installBoost.bash  installCmake.bash
src/cmake/modules/: FindMarkdown.cmake  UseMarkdown.cmake
src/cmake/postInstall/: CMakeLists.txt
src/cmake/preInstall/: CMakeLists.txt
src/demo/: CMakeLists.txt  README.md  README.txt  runMantaWorkflowDemo.bash  runMantaWorkflowDemo.py
src/demo/data/: CMakeLists.txt  G15512.HCC1954.1.COST16011_region.bam  G15512.HCC1954.1.COST16011_region.bam.bai  HCC1954.NORMAL.30x.compare.COST16011_region.bam  HCC1954.NORMAL.30x.compare.COST16011_region.bam.bai  Homo_sapiens_assembly19.COST16011_region.fa.bz2  Homo_sapiens_assembly19.COST16011_region.fa.fai  Homo_sapiens_assembly19.COST16011_region.fa.tar.bz2  NA12891_dupmark_chr20_region.bam  NA12891_dupmark_chr20_region.bam.bai  chr20_860k_only.fa.bz2  chr20_860k_only.fa.fai
src/markdown/: CMakeLists.txt  mantaContributorGuideAlignment.md  mantaDeveloperGuide.md  mantaDeveloperGuideAlignment.md  mantaDeveloperGuideBreakendGraph.md  mantaDeveloperGuideDebugFullRun.md  mantaDeveloperGuideDebugSingleSV.md  mantaDeveloperGuideID.md  mantaUserGuide.md  tableOfContents.js  userGuide.css  userguide.css
src/opt/: CMakeLists.txt
src/python/: CMakeLists.txt
src/python/lib/: CMakeLists.txt  checkChromSet.py  configBuildTimeInfo.py  configureOptions.py  configureUtil.py  estimateHardware.py  makeRunScript.py  mantaOptions.py  mantaWorkflow.py  sharedWorkflow.py  workflowUtil.py
src/python/libexec/: CMakeLists.txt  cat.py  convertInversion.py  denovo_scoring.py  extractSmallIndelCandidates.py  filterBam.py  getBamAvgChromDepth.py  mergeBam.py  mergeChromDepth.py  ploidyFilter.py  sortBam.py  sortEdgeLogs.py  sortVcf.py  updateSampleFTFilter.py  vcfCmdlineSwapper.py
src/srcqc/: README.txt  boost_macros.cfg  check_for_nonascii_source.bash  run_cppcheck.bash  run_cppcheck.py
(+720 files in other folders)
